--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -42,6 +43,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:percent:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.volley:volley:1.1.1'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
