--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@ package="fr.blackmamba.dateplaceapp">
         android:name=".UserSettingActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme" />
+    <activity android:name=".SearchActivity"
+        android:theme="@style/AppTheme"/>
     <activity android:name=".MapActivity"
         android:theme="@style/AppTheme">
     </activity>
