--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,25 +28,32 @@ package="fr.blackmamba.dateplaceapp">
     <activity
         android:name=".ConnexionActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
-        android:theme="@style/FullscreenTheme" />
+        android:theme="@style/FullscreenTheme"
+        android:parentActivityName=".RunAppActivity"/>
     <activity
         android:name=".InscriptionActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
-        android:theme="@style/FullscreenTheme" />
+        android:theme="@style/FullscreenTheme"
+        android:parentActivityName=".RunAppActivity"/>
     <activity
         android:name=".PlaceActivity"
         android:theme="@style/AppTheme" />
     <activity
         android:name=".UserProfilActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme"
+        android:parentActivityName=".MapActivity"/>
     <activity
         android:name=".UserSettingActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
-        android:theme="@style/AppTheme" />
-    <activity android:name=".SearchActivity"
-        android:theme="@style/AppTheme"/>
-    <activity android:name=".MapActivity"
+        android:theme="@style/AppTheme"
+        android:parentActivityName=".UserProfilActivity"/>
+    <activity
+        android:name=".SearchActivity"
+        android:theme="@style/AppTheme"
+        android:parentActivityName=".MapActivity"/>
+    <activity
+        android:name=".MapActivity"
         android:theme="@style/AppTheme">
     </activity>
 </application>
