--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@ package="fr.blackmamba.dateplaceapp">
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
-        android:name=".RunAppActivity"
+        android:name=".launcher.RunAppActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:label="@string/app_name"
         android:theme="@style/FullscreenTheme">
@@ -26,28 +26,28 @@ package="fr.blackmamba.dateplaceapp">
         </intent-filter>
     </activity>
     <activity
-        android:name=".ConnexionActivity"
+        android:name=".launcher.ConnexionActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/FullscreenTheme"
-        android:parentActivityName=".RunAppActivity"/>
+        android:parentActivityName=".launcher.RunAppActivity"/>
     <activity
-        android:name=".InscriptionActivity"
+        android:name=".launcher.InscriptionActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/FullscreenTheme"
-        android:parentActivityName=".RunAppActivity"/>
+        android:parentActivityName=".launcher.RunAppActivity"/>
     <activity
         android:name=".PlaceActivity"
         android:theme="@style/AppTheme" />
     <activity
-        android:name=".UserProfilActivity"
+        android:name=".profile.UserProfilActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme"
         android:parentActivityName=".MapActivity"/>
     <activity
-        android:name=".UserSettingActivity"
+        android:name=".profile.UserSettingActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme"
-        android:parentActivityName=".UserProfilActivity"/>
+        android:parentActivityName=".profile.UserProfilActivity"/>
     <activity
         android:name=".SearchActivity"
         android:theme="@style/AppTheme"
