Upload blob image to DB and retrieve it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@ package="fr.blackmamba.dateplaceapp">
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher"
     android:supportsRtl="true"
+    android:usesCleartextTraffic="true"
     android:theme="@style/AppTheme">
     <activity
         android:name=".launcher.RunAppActivity"
